# ruff_pipeline

./: pyproject.toml
.github/workflows/: ruff_check.yml  sphinx_build_html_docs.yml
docs/source/: conf.py  index.rst
src/ruff_pipeline/: __init__.py
src/string_utils/: __init__.py  string_operations.py
