[project]
name = "ruff-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "maxjost42", email = "max.jost@student.tugraz.at" }
]
requires-python = ">=3.13"
dependencies = [
    "furo>=2024.8.6",
    "sphinx>=8.1.3",
]

[project.scripts]
ruff-pipeline = "ruff_pipeline:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.4",
]
